Minor gametest code cleanup (no changes to test outcomes)